--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,7 @@
 	<classpathentry kind="var" path="USERLIBS_DIR/TalonSRXLibJava.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Jack/Downloads/java/lib/TalonSRXLibJava.jar"/>
 	<classpathentry kind="lib" path="/Users/jackderuntz/wpilib/user/java/lib/CTRLib.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jack/wpilib/user/java/lib/navx_frc.jar"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/navx_frc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
